# netpanzer

./: .cirrus.yml  .dockerignore  .gitignore  0.8.7-RELEASE.txt  0.9.0-RC1.txt  0.9.0-RC2.txt  0.9.0-RC3.txt  0.9.0-RC4.txt  BUGS  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  CodeBlock.txt  Heroes.opt  README  README.md  RELNOTES  SConstruct  TODO  autogen.sh  makerelease.sh  meson.build  meson_options.txt  netpanzer.xpm  np-launcher  readme.html  setup-build.bat  setup-build.sh
emscripten/: emscripten-cross-file.txt  meson.build  preamble.js  web.html
po/: POTFILES  de.po  meson.build  netpanzer.pot  pt_BR.po
src/Lib/2D/: BuiltinFont.cpp  CachedFontRenderer.cpp  CachedFontRenderer.hpp  Color.cpp  Color.hpp  ColorTable.cpp  ColorTable.hpp  DigitText.hpp  FontSystem2D.hpp  PackedSurface.cpp  PackedSurface.hpp  Palette.cpp  Palette.hpp  RGBColor.hpp  Span.cpp  Span.hpp  Surface.cpp  Surface.hpp  meson.build
src/Lib/Util/: BresenhamLine.cpp  BresenhamLine.hpp  Endian.hpp  Exception.cpp  Exception.hpp  FileStream.hpp  FileSystem.cpp  FileSystem.hpp  Log.cpp  Log.hpp  Math.cpp  Math.hpp  NTimer.hpp  NoCopy.hpp  StreamTokenizer.hpp  StringTokenizer.hpp  StringUtil.cpp  StringUtil.hpp  TimeStamp.cpp  TimeStamp.hpp  Timer.cpp  Timer.hpp  TimerInterface.cpp  TimerInterface.hpp  UtilInterface.cpp  UtilInterface.hpp  meson.build
src/Lib/lua/: lua.cpp  lua.hpp  meson.build
src/NetPanzer/: meson.build
src/NetPanzer/Bot/: Bot.cpp  Bot.hpp  BotPlayer.cpp  BotPlayer.hpp  BotTask.hpp  BotTaskList.cpp  BotTaskList.hpp
src/NetPanzer/Classes/: MapFile.cpp  MapFile.hpp  OpcodeDebugger.cpp  OpcodeDebugger.hpp  PlacementMatrix.cpp  PlacementMatrix.hpp  PlayerState.cpp  PlayerState.hpp  PlayerUnitConfig.cpp  PlayerUnitConfig.hpp  ScreenSurface.cpp  ScreenSurface.hpp  SelectionBoxSprite.cpp  SelectionBoxSprite.hpp  SelectionList.cpp  SelectionList.hpp  SpawnList.cpp  SpawnList.hpp  Sprite.cpp  Sprite.hpp  SpriteSorter.cpp  SpriteSorter.hpp  TileSet.cpp  TileSet.hpp  TipOfDay.cpp  TipOfDay.hpp  UnitMessage.hpp  UnitMessageTypes.hpp  ViewCamera.cpp  ViewCamera.hpp  WadMapTable.hpp  WorldInputCmdProcessor.cpp  WorldInputCmdProcessor.hpp  WorldMap.cpp  WorldMap.hpp
src/NetPanzer/Classes/AI/: Astar.cpp  Astar.hpp  PathList.cpp  PathList.hpp  PathingState.cpp  PathingState.hpp
src/NetPanzer/Classes/Network/: NetMessage.hpp  (+38 more)
src/NetPanzer/Core/: CoreTypes.hpp  NetworkGlobals.cpp  NetworkGlobals.hpp  main.cpp
src/NetPanzer/Interfaces/: BaseGameManager.cpp  BaseGameManager.hpp  BotGameManager.cpp  BotGameManager.hpp  ChatInterface.cpp  ChatInterface.hpp  ConfigVariable.cpp  ConfigVariable.hpp  Console.cpp  Console.hpp  ConsoleInterface.cpp  ConsoleInterface.hpp  DedicatedGameManager.cpp  DedicatedGameManager.hpp  GameConfig.cpp  GameConfig.hpp  GameControlRulesDaemon.cpp  GameControlRulesDaemon.hpp  GameManager.cpp  GameManager.hpp  Heartbeat.cpp  Heartbeat.hpp  InfoSocket.cpp  InfoSocket.hpp  KeyboardInterface.cpp  KeyboardInterface.hpp  MapInterface.cpp  MapInterface.hpp  MapsManager.cpp  MapsManager.hpp  MenuConfig.cpp  MenuConfig.hpp  MouseInterface.cpp  MouseInterface.hpp  PathScheduler.cpp  PathScheduler.hpp  PlayerGameManager.cpp  PlayerGameManager.hpp  PlayerInterface.cpp  PlayerInterface.hpp  (+7 more)
src/NetPanzer/Network/: ClientSocket.cpp  ClientSocket.hpp  ProxyServer.cpp  ProxyServer.hpp
src/NetPanzer/Objectives/: Objective.cpp  Objective.hpp  ObjectiveInterface.cpp  ObjectiveInterface.hpp
src/NetPanzer/Particles/: ChunkTrajectoryParticle2D.cpp  ChunkTrajectoryParticle2D.hpp  CloudParticle2D.cpp  CloudParticle2D.hpp  CraterParticle2D.cpp  CraterParticle2D.hpp  DirtKickParticle2D.cpp  DirtKickParticle2D.hpp  FireParticle2D.cpp  FireParticle2D.hpp  FireParticleSystem2D.cpp  FireParticleSystem2D.hpp  FlameParticle2D.cpp  FlameParticle2D.hpp  FlashParticle2D.cpp  FlashParticle2D.hpp  GroundExplosionParticle2D.cpp  GroundExplosionParticle2D.hpp  GroundExplosionParticleSystem2D.cpp  GroundExplosionParticleSystem2D.hpp  MovementDirtPuffParticle2D.hpp  Particle2D.cpp  Particle2D.hpp  ParticleInterface.cpp  ParticleInterface.hpp  ParticleSystem2D.cpp  ParticleSystem2D.hpp  ParticleSystemGlobals.cpp  ParticleSystemGlobals.hpp  ParticleTweakView.cpp  ParticleTweakView.hpp  Physics.cpp  Physics.hpp  PuffParticle2D.cpp  PuffParticle2D.hpp  RadarPingParticle2D.cpp  RadarPingParticle2D.hpp  SmokingTrajectoryParticle2D.cpp  SmokingTrajectoryParticle2D.hpp  SmolderParticleSystem2D.cpp  (+17 more)
src/NetPanzer/Port/: MapData.hpp
src/NetPanzer/PowerUps/: BonusUnitPowerUp.cpp  BonusUnitPowerUp.hpp  EnemyRadarPowerUp.cpp  EnemyRadarPowerUp.hpp  PowerUp.cpp  PowerUp.hpp  PowerUpInterface.cpp  PowerUpInterface.hpp  UnitGlobalPowerUp.cpp  UnitGlobalPowerUp.hpp  UnitPowerUp.cpp  UnitPowerUp.hpp
src/NetPanzer/Resources/: ResourceManager.cpp  ResourceManager.hpp
src/NetPanzer/Scripts/: NetPanzerModule.cpp  ScriptHelper.cpp  ScriptHelper.hpp  ScriptManager.cpp  ScriptManager.hpp  meson.build
src/NetPanzer/Structs/: TileSetStruct.hpp
src/NetPanzer/System/: DummySound.cpp  DummySound.hpp  SDLEvents.cpp  SDLEvents.hpp  SDLSound.cpp  SDLSound.hpp  SDLVideo.cpp  SDLVideo.hpp  Sound.cpp  Sound.hpp
src/NetPanzer/Units/: UnitBase.hpp  UnitBlackBoard.cpp  UnitBlackBoard.hpp  UnitBucketArray.cpp  UnitBucketArray.hpp  UnitGlobals.cpp  UnitGlobals.hpp  UnitInterface.cpp  UnitInterface.hpp  UnitLifecycles.hpp  UnitOpcodeDecoder.cpp  UnitOpcodeDecoder.hpp  UnitOpcodeEncoder.cpp  UnitOpcodeEncoder.hpp  UnitOpcodes.hpp  UnitProfileInterface.cpp  UnitProfileInterface.hpp  UnitState.cpp  UnitState.hpp  UnitTypes.hpp  Vehicle.cpp  Vehicle.hpp
src/NetPanzer/Views/: GameViewGlobals.cpp  GameViewGlobals.hpp
src/NetPanzer/Weapons/: BulletWeapon.cpp  BulletWeapon.hpp  MissleWeapon.cpp  MissleWeapon.hpp  Projectile.cpp  Projectile.hpp  ProjectileInterface.cpp  ProjectileInterface.hpp  ShellWeapon.cpp  ShellWeapon.hpp  Weapon.cpp  Weapon.hpp  WeaponGlobals.cpp  WeaponGlobals.hpp
support/tools/: bmp2pak.cpp  meson.build  pak2bmp.cpp
tests/: README.md  meson.build  package.cpp  test.hpp  test_data_install.sh
(+805 files in other folders)
