cmake_minimum_required(VERSION 3.24)
project(netpanzer)

set(CMAKE_CXX_STANDARD 14)

include_directories(src)
include_directories(src/Lib)
include_directories(src/Lib/2D)
include_directories(src/Lib/ArrayUtil)
include_directories(src/Lib/INIParser)
include_directories(src/Lib/lua)
include_directories(src/Lib/Network)
include_directories(src/Lib/optionmm)
include_directories(src/Lib/physfs)
include_directories(src/Lib/physfs/zlib123)
include_directories(src/Lib/Types)
include_directories(src/Lib/Util)
include_directories(src/NetPanzer)
include_directories(src/NetPanzer/Bot)
include_directories(src/NetPanzer/Classes)
include_directories(src/NetPanzer/Classes/AI)
include_directories(src/NetPanzer/Classes/Network)
include_directories(src/NetPanzer/Core)
include_directories(src/NetPanzer/Interfaces)
include_directories(src/NetPanzer/Network)
include_directories(src/NetPanzer/Objectives)
include_directories(src/NetPanzer/Particles)
include_directories(src/NetPanzer/Port)
include_directories(src/NetPanzer/PowerUps)
include_directories(src/NetPanzer/Resources)
include_directories(src/NetPanzer/Scripts)
include_directories(src/NetPanzer/Structs)
include_directories(src/NetPanzer/System)
include_directories(src/NetPanzer/Units)
include_directories(src/NetPanzer/Views)
include_directories(src/NetPanzer/Views/Components)
include_directories(src/NetPanzer/Views/Game)
include_directories(src/NetPanzer/Views/MainMenu)
include_directories(src/NetPanzer/Views/MainMenu/Multi)
include_directories(src/NetPanzer/Views/MainMenu/Multi/MasterServer)
include_directories(src/NetPanzer/Weapons)
include_directories(support/macosx)
include_directories(support/tools)

add_executable(netpanzer
        src/Lib/2D/Color.cpp
        src/Lib/2D/Color.hpp
        src/Lib/2D/ColorTable.cpp
        src/Lib/2D/ColorTable.hpp
        src/Lib/2D/DigitText.cpp
        src/Lib/2D/DigitText.hpp
        src/Lib/2D/FontSystem2D.hpp
        src/Lib/2D/PackedSurface.cpp
        src/Lib/2D/PackedSurface.hpp
        src/Lib/2D/Palette.cpp
        src/Lib/2D/Palette.hpp
        src/Lib/2D/RGBColor.cpp
        src/Lib/2D/RGBColor.hpp
        src/Lib/2D/Span.cpp
        src/Lib/2D/Span.hpp
        src/Lib/2D/Surface.cpp
        src/Lib/2D/Surface.hpp
        src/Lib/ArrayUtil/ArrayTemplate.hpp
        src/Lib/ArrayUtil/BitArray.cpp
        src/Lib/ArrayUtil/BitArray.hpp
        src/Lib/ArrayUtil/BoundBox.cpp
        src/Lib/ArrayUtil/BoundBox.hpp
        src/Lib/ArrayUtil/BucketArrayTemplate.hpp
        src/Lib/ArrayUtil/LinkListDoubleTemplate.hpp
        src/Lib/ArrayUtil/QueueTemplate.hpp
        src/Lib/INIParser/Section.cpp
        src/Lib/INIParser/Section.hpp
        src/Lib/INIParser/Store.cpp
        src/Lib/INIParser/Store.hpp
        src/Lib/lua/lapi.c
        src/Lib/lua/lapi.h
        src/Lib/lua/lauxlib.c
        src/Lib/lua/lauxlib.h
        src/Lib/lua/lbaselib.c
        src/Lib/lua/lcode.c
        src/Lib/lua/lcode.h
        src/Lib/lua/ldblib.c
        src/Lib/lua/ldebug.c
        src/Lib/lua/ldebug.h
        src/Lib/lua/ldo.c
        src/Lib/lua/ldo.h
        src/Lib/lua/ldump.c
        src/Lib/lua/lfunc.c
        src/Lib/lua/lfunc.h
        src/Lib/lua/lgc.c
        src/Lib/lua/lgc.h
        src/Lib/lua/linit.c
        src/Lib/lua/liolib.c
        src/Lib/lua/llex.c
        src/Lib/lua/llex.h
        src/Lib/lua/llimits.h
        src/Lib/lua/lmathlib.c
        src/Lib/lua/lmem.c
        src/Lib/lua/lmem.h
        src/Lib/lua/loadlib.c
        src/Lib/lua/lobject.c
        src/Lib/lua/lobject.h
        src/Lib/lua/lopcodes.c
        src/Lib/lua/lopcodes.h
        src/Lib/lua/loslib.c
        src/Lib/lua/lparser.c
        src/Lib/lua/lparser.h
        src/Lib/lua/lstate.c
        src/Lib/lua/lstate.h
        src/Lib/lua/lstring.c
        src/Lib/lua/lstring.h
        src/Lib/lua/lstrlib.c
        src/Lib/lua/ltable.c
        src/Lib/lua/ltable.h
        src/Lib/lua/ltablib.c
        src/Lib/lua/ltm.c
        src/Lib/lua/ltm.h
        src/Lib/lua/lua.cpp
        src/Lib/lua/lua.h
        src/Lib/lua/lua.hpp
        src/Lib/lua/luaconf.h
        src/Lib/lua/lualib.h
        src/Lib/lua/lundump.c
        src/Lib/lua/lundump.h
        src/Lib/lua/lvm.c
        src/Lib/lua/lvm.h
        src/Lib/lua/lzio.c
        src/Lib/lua/lzio.h
        src/Lib/lua/print.c
        src/Lib/Network/Address.cpp
        src/Lib/Network/Address.hpp
        src/Lib/Network/NetworkException.hpp
        src/Lib/Network/NetworkManager.cpp
        src/Lib/Network/NetworkManager.hpp
        src/Lib/Network/SocketBase.cpp
        src/Lib/Network/SocketBase.hpp
        src/Lib/Network/SocketHeaders.hpp
        src/Lib/Network/SocketManager.cpp
        src/Lib/Network/SocketManager.hpp
        src/Lib/Network/SocketSet.hpp
        src/Lib/Network/TCPListenSocket.cpp
        src/Lib/Network/TCPListenSocket.hpp
        src/Lib/Network/TCPSocket.cpp
        src/Lib/Network/TCPSocket.hpp
        src/Lib/Network/UDPSocket.cpp
        src/Lib/Network/UDPSocket.hpp
        src/Lib/optionmm/command_line.cpp
        src/Lib/optionmm/command_line.hpp
        src/Lib/optionmm/option.cpp
        src/Lib/optionmm/option.hpp
        src/Lib/physfs/archivers/dir.c
        src/Lib/physfs/archivers/zip.c
        src/Lib/physfs/platform/beos.cpp
        src/Lib/physfs/platform/macosx.c
        src/Lib/physfs/platform/os2.c
        src/Lib/physfs/platform/pocketpc.c
        src/Lib/physfs/platform/posix.c
        src/Lib/physfs/platform/unix.c
        src/Lib/physfs/platform/windows.c
        src/Lib/physfs/zlib123/adler32.c
        src/Lib/physfs/zlib123/compress.c
        src/Lib/physfs/zlib123/crc32.c
        src/Lib/physfs/zlib123/crc32.h
        src/Lib/physfs/zlib123/deflate.c
        src/Lib/physfs/zlib123/deflate.h
        src/Lib/physfs/zlib123/gzio.c
        src/Lib/physfs/zlib123/infback.c
        src/Lib/physfs/zlib123/inffast.c
        src/Lib/physfs/zlib123/inffast.h
        src/Lib/physfs/zlib123/inffixed.h
        src/Lib/physfs/zlib123/inflate.c
        src/Lib/physfs/zlib123/inflate.h
        src/Lib/physfs/zlib123/inftrees.c
        src/Lib/physfs/zlib123/inftrees.h
        src/Lib/physfs/zlib123/trees.c
        src/Lib/physfs/zlib123/trees.h
        src/Lib/physfs/zlib123/uncompr.c
        src/Lib/physfs/zlib123/zconf.h
        src/Lib/physfs/zlib123/zlib.h
        src/Lib/physfs/zlib123/zutil.c
        src/Lib/physfs/zlib123/zutil.h
        src/Lib/physfs/physfs.c
        src/Lib/physfs/physfs.h
        src/Lib/physfs/physfs_byteorder.c
        src/Lib/physfs/physfs_casefolding.h
        src/Lib/physfs/physfs_internal.h
        src/Lib/physfs/physfs_platforms.h
        src/Lib/physfs/physfs_unicode.c
        src/Lib/Types/Angle.cpp
        src/Lib/Types/Angle.hpp
        src/Lib/Types/fRect.cpp
        src/Lib/Types/fRect.hpp
        src/Lib/Types/fXY.hpp
        src/Lib/Types/fXYZ.cpp
        src/Lib/Types/fXYZ.hpp
        src/Lib/Types/iRect.cpp
        src/Lib/Types/iRect.hpp
        src/Lib/Types/iXY.cpp
        src/Lib/Types/iXY.hpp
        src/Lib/Util/BresenhamLine.cpp
        src/Lib/Util/BresenhamLine.hpp
        src/Lib/Util/Endian.hpp
        src/Lib/Util/Exception.cpp
        src/Lib/Util/Exception.hpp
        src/Lib/Util/FileStream.hpp
        src/Lib/Util/FileSystem.cpp
        src/Lib/Util/FileSystem.hpp
        src/Lib/Util/Log.cpp
        src/Lib/Util/Log.hpp
        src/Lib/Util/Math.cpp
        src/Lib/Util/Math.hpp
        src/Lib/Util/NoCopy.hpp
        src/Lib/Util/NTimer.hpp
        src/Lib/Util/StreamTokenizer.hpp
        src/Lib/Util/StringTokenizer.hpp
        src/Lib/Util/StringUtil.cpp
        src/Lib/Util/StringUtil.hpp
        src/Lib/Util/Timer.cpp
        src/Lib/Util/Timer.hpp
        src/Lib/Util/TimerInterface.cpp
        src/Lib/Util/TimerInterface.hpp
        src/Lib/Util/TimeStamp.cpp
        src/Lib/Util/TimeStamp.hpp
        src/Lib/Util/UtilInterface.cpp
        src/Lib/Util/UtilInterface.hpp
        src/NetPanzer/Bot/Bot.cpp
        src/NetPanzer/Bot/Bot.hpp
        src/NetPanzer/Bot/BotPlayer.cpp
        src/NetPanzer/Bot/BotPlayer.hpp
        src/NetPanzer/Bot/BotTask.hpp
        src/NetPanzer/Bot/BotTaskList.cpp
        src/NetPanzer/Bot/BotTaskList.hpp
        src/NetPanzer/Classes/AI/Astar.cpp
        src/NetPanzer/Classes/AI/Astar.hpp
        src/NetPanzer/Classes/AI/PathingState.cpp
        src/NetPanzer/Classes/AI/PathingState.hpp
        src/NetPanzer/Classes/AI/PathList.cpp
        src/NetPanzer/Classes/AI/PathList.hpp
        src/NetPanzer/Classes/Network/ChatNetMessage.hpp
        src/NetPanzer/Classes/Network/ClientConnectDaemon.cpp
        src/NetPanzer/Classes/Network/ClientConnectDaemon.hpp
        src/NetPanzer/Classes/Network/ClientMessageRouter.cpp
        src/NetPanzer/Classes/Network/ClientMessageRouter.hpp
        src/NetPanzer/Classes/Network/ConnectNetMessage.cpp
        src/NetPanzer/Classes/Network/ConnectNetMessage.hpp
        src/NetPanzer/Classes/Network/GameControlNetMessage.hpp
        src/NetPanzer/Classes/Network/NetMessage.hpp
        src/NetPanzer/Classes/Network/NetMessageDecoder.cpp
        src/NetPanzer/Classes/Network/NetMessageDecoder.hpp
        src/NetPanzer/Classes/Network/NetMessageEncoder.cpp
        src/NetPanzer/Classes/Network/NetMessageEncoder.hpp
        src/NetPanzer/Classes/Network/NetPacket.hpp
        src/NetPanzer/Classes/Network/NetPacketDebugger.cpp
        src/NetPanzer/Classes/Network/NetPacketDebugger.hpp
        src/NetPanzer/Classes/Network/NetPacketQueues.cpp
        src/NetPanzer/Classes/Network/NetPacketQueues.hpp
        src/NetPanzer/Classes/Network/NetTypes.hpp
        src/NetPanzer/Classes/Network/NetworkClient.cpp
        src/NetPanzer/Classes/Network/NetworkClient.hpp
        src/NetPanzer/Classes/Network/NetworkInterface.cpp
        src/NetPanzer/Classes/Network/NetworkInterface.hpp
        src/NetPanzer/Classes/Network/NetworkReturnCodes.hpp
        src/NetPanzer/Classes/Network/NetworkServer.cpp
        src/NetPanzer/Classes/Network/NetworkServer.hpp
        src/NetPanzer/Classes/Network/NetworkState.cpp
        src/NetPanzer/Classes/Network/NetworkState.hpp
        src/NetPanzer/Classes/Network/ObjectiveNetMessage.hpp
        src/NetPanzer/Classes/Network/PlayerNetMessage.hpp
        src/NetPanzer/Classes/Network/PowerUpNetMessage.hpp
        src/NetPanzer/Classes/Network/ServerConnectDaemon.cpp
        src/NetPanzer/Classes/Network/ServerConnectDaemon.hpp
        src/NetPanzer/Classes/Network/ServerMessageRouter.cpp
        src/NetPanzer/Classes/Network/ServerMessageRouter.hpp
        src/NetPanzer/Classes/Network/SystemNetMessage.hpp
        src/NetPanzer/Classes/Network/TerminalNetMesg.hpp
        src/NetPanzer/Classes/Network/UnitNetMessage.hpp
        src/NetPanzer/Classes/MapFile.cpp
        src/NetPanzer/Classes/MapFile.hpp
        src/NetPanzer/Classes/OpcodeDebugger.cpp
        src/NetPanzer/Classes/OpcodeDebugger.hpp
        src/NetPanzer/Classes/PlacementMatrix.cpp
        src/NetPanzer/Classes/PlacementMatrix.hpp
        src/NetPanzer/Classes/PlayerState.cpp
        src/NetPanzer/Classes/PlayerState.hpp
        src/NetPanzer/Classes/PlayerUnitConfig.cpp
        src/NetPanzer/Classes/PlayerUnitConfig.hpp
        src/NetPanzer/Classes/ScreenSurface.cpp
        src/NetPanzer/Classes/ScreenSurface.hpp
        src/NetPanzer/Classes/SelectionBoxSprite.cpp
        src/NetPanzer/Classes/SelectionBoxSprite.hpp
        src/NetPanzer/Classes/SelectionList.cpp
        src/NetPanzer/Classes/SelectionList.hpp
        src/NetPanzer/Classes/SpawnList.cpp
        src/NetPanzer/Classes/SpawnList.hpp
        src/NetPanzer/Classes/Sprite.cpp
        src/NetPanzer/Classes/Sprite.hpp
        src/NetPanzer/Classes/SpriteSorter.cpp
        src/NetPanzer/Classes/SpriteSorter.hpp
        src/NetPanzer/Classes/TileSet.cpp
        src/NetPanzer/Classes/TileSet.hpp
        src/NetPanzer/Classes/TipOfDay.cpp
        src/NetPanzer/Classes/TipOfDay.hpp
        src/NetPanzer/Classes/UnitMessage.hpp
        src/NetPanzer/Classes/UnitMessageTypes.hpp
        src/NetPanzer/Classes/ViewCamera.cpp
        src/NetPanzer/Classes/ViewCamera.hpp
        src/NetPanzer/Classes/WadMapTable.hpp
        src/NetPanzer/Classes/WorldInputCmdProcessor.cpp
        src/NetPanzer/Classes/WorldInputCmdProcessor.hpp
        src/NetPanzer/Classes/WorldMap.cpp
        src/NetPanzer/Classes/WorldMap.hpp
        src/NetPanzer/Core/CoreTypes.hpp
        src/NetPanzer/Core/main.cpp
        src/NetPanzer/Core/NetworkGlobals.cpp
        src/NetPanzer/Core/NetworkGlobals.hpp
        src/NetPanzer/Interfaces/BaseGameManager.cpp
        src/NetPanzer/Interfaces/BaseGameManager.hpp
        src/NetPanzer/Interfaces/BotGameManager.cpp
        src/NetPanzer/Interfaces/BotGameManager.hpp
        src/NetPanzer/Interfaces/ChatInterface.cpp
        src/NetPanzer/Interfaces/ChatInterface.hpp
        src/NetPanzer/Interfaces/ConfigVariable.cpp
        src/NetPanzer/Interfaces/ConfigVariable.hpp
        src/NetPanzer/Interfaces/Console.cpp
        src/NetPanzer/Interfaces/Console.hpp
        src/NetPanzer/Interfaces/ConsoleInterface.cpp
        src/NetPanzer/Interfaces/ConsoleInterface.hpp
        src/NetPanzer/Interfaces/DedicatedGameManager.cpp
        src/NetPanzer/Interfaces/DedicatedGameManager.hpp
        src/NetPanzer/Interfaces/GameConfig.cpp
        src/NetPanzer/Interfaces/GameConfig.hpp
        src/NetPanzer/Interfaces/GameControlRulesDaemon.cpp
        src/NetPanzer/Interfaces/GameControlRulesDaemon.hpp
        src/NetPanzer/Interfaces/GameManager.cpp
        src/NetPanzer/Interfaces/GameManager.hpp
        src/NetPanzer/Interfaces/Heartbeat.cpp
        src/NetPanzer/Interfaces/Heartbeat.hpp
        src/NetPanzer/Interfaces/InfoSocket.cpp
        src/NetPanzer/Interfaces/InfoSocket.hpp
        src/NetPanzer/Interfaces/KeyboardInterface.cpp
        src/NetPanzer/Interfaces/KeyboardInterface.hpp
        src/NetPanzer/Interfaces/MapInterface.cpp
        src/NetPanzer/Interfaces/MapInterface.hpp
        src/NetPanzer/Interfaces/MapsManager.cpp
        src/NetPanzer/Interfaces/MapsManager.hpp
        src/NetPanzer/Interfaces/MouseInterface.cpp
        src/NetPanzer/Interfaces/MouseInterface.hpp
        src/NetPanzer/Interfaces/PathScheduler.cpp
        src/NetPanzer/Interfaces/PathScheduler.hpp
        src/NetPanzer/Interfaces/PlayerGameManager.cpp
        src/NetPanzer/Interfaces/PlayerGameManager.hpp
        src/NetPanzer/Interfaces/PlayerInterface.cpp
        src/NetPanzer/Interfaces/PlayerInterface.hpp
        src/NetPanzer/Interfaces/ServerCommand.hpp
        src/NetPanzer/Interfaces/ServerConsole.cpp
        src/NetPanzer/Interfaces/ServerConsole.hpp
        src/NetPanzer/Interfaces/TileInterface.cpp
        src/NetPanzer/Interfaces/TileInterface.hpp
        src/NetPanzer/Interfaces/WorldViewInterface.cpp
        src/NetPanzer/Interfaces/WorldViewInterface.hpp
        src/NetPanzer/Network/ClientSocket.cpp
        src/NetPanzer/Network/ClientSocket.hpp
        src/NetPanzer/Network/ProxyServer.cpp
        src/NetPanzer/Network/ProxyServer.hpp
        src/NetPanzer/Objectives/Objective.cpp
        src/NetPanzer/Objectives/Objective.hpp
        src/NetPanzer/Objectives/ObjectiveInterface.cpp
        src/NetPanzer/Objectives/ObjectiveInterface.hpp
        src/NetPanzer/Particles/ChunkTrajectoryParticle2D.cpp
        src/NetPanzer/Particles/ChunkTrajectoryParticle2D.hpp
        src/NetPanzer/Particles/CloudParticle2D.cpp
        src/NetPanzer/Particles/CloudParticle2D.hpp
        src/NetPanzer/Particles/CraterParticle2D.cpp
        src/NetPanzer/Particles/CraterParticle2D.hpp
        src/NetPanzer/Particles/DirtKickParticle2D.cpp
        src/NetPanzer/Particles/DirtKickParticle2D.hpp
        src/NetPanzer/Particles/FireParticle2D.cpp
        src/NetPanzer/Particles/FireParticle2D.hpp
        src/NetPanzer/Particles/FireParticleSystem2D.cpp
        src/NetPanzer/Particles/FireParticleSystem2D.hpp
        src/NetPanzer/Particles/FlameParticle2D.cpp
        src/NetPanzer/Particles/FlameParticle2D.hpp
        src/NetPanzer/Particles/FlashParticle2D.cpp
        src/NetPanzer/Particles/FlashParticle2D.hpp
        src/NetPanzer/Particles/GroundExplosionParticle2D.cpp
        src/NetPanzer/Particles/GroundExplosionParticle2D.hpp
        src/NetPanzer/Particles/GroundExplosionParticleSystem2D.cpp
        src/NetPanzer/Particles/GroundExplosionParticleSystem2D.hpp
        src/NetPanzer/Particles/MovementDirtPuffParticle2D.hpp
        src/NetPanzer/Particles/Particle2D.cpp
        src/NetPanzer/Particles/Particle2D.hpp
        src/NetPanzer/Particles/ParticleInterface.cpp
        src/NetPanzer/Particles/ParticleInterface.hpp
        src/NetPanzer/Particles/ParticleSystem2D.cpp
        src/NetPanzer/Particles/ParticleSystem2D.hpp
        src/NetPanzer/Particles/ParticleSystemGlobals.cpp
        src/NetPanzer/Particles/ParticleSystemGlobals.hpp
        src/NetPanzer/Particles/ParticleTweakView.cpp
        src/NetPanzer/Particles/ParticleTweakView.hpp
        src/NetPanzer/Particles/Physics.cpp
        src/NetPanzer/Particles/Physics.hpp
        src/NetPanzer/Particles/PuffParticle2D.cpp
        src/NetPanzer/Particles/PuffParticle2D.hpp
        src/NetPanzer/Particles/RadarPingParticle2D.cpp
        src/NetPanzer/Particles/RadarPingParticle2D.hpp
        src/NetPanzer/Particles/SmokingTrajectoryParticle2D.cpp
        src/NetPanzer/Particles/SmokingTrajectoryParticle2D.hpp
        src/NetPanzer/Particles/SmolderParticleSystem2D.cpp
        src/NetPanzer/Particles/SmolderParticleSystem2D.hpp
        src/NetPanzer/Particles/SnowParticle2D.cpp
        src/NetPanzer/Particles/SnowParticle2D.hpp
        src/NetPanzer/Particles/SnowParticleSystem2D.cpp
        src/NetPanzer/Particles/SnowParticleSystem2D.hpp
        src/NetPanzer/Particles/SparkParticle2D.cpp
        src/NetPanzer/Particles/SparkParticle2D.hpp
        src/NetPanzer/Particles/TemplateExplosionSystem.cpp
        src/NetPanzer/Particles/TemplateExplosionSystem.hpp
        src/NetPanzer/Particles/TemplateMuzzleSystem.cpp
        src/NetPanzer/Particles/TemplateMuzzleSystem.hpp
        src/NetPanzer/Particles/TrajectoryParticle2D.cpp
        src/NetPanzer/Particles/TrajectoryParticle2D.hpp
        src/NetPanzer/Particles/VectorPuffParticle2D.cpp
        src/NetPanzer/Particles/VectorPuffParticle2D.hpp
        src/NetPanzer/Particles/WindParticle2D.cpp
        src/NetPanzer/Particles/WindParticle2D.hpp
        src/NetPanzer/Port/MapData.hpp
        src/NetPanzer/PowerUps/BonusUnitPowerUp.cpp
        src/NetPanzer/PowerUps/BonusUnitPowerUp.hpp
        src/NetPanzer/PowerUps/EnemyRadarPowerUp.cpp
        src/NetPanzer/PowerUps/EnemyRadarPowerUp.hpp
        src/NetPanzer/PowerUps/PowerUp.cpp
        src/NetPanzer/PowerUps/PowerUp.hpp
        src/NetPanzer/PowerUps/PowerUpInterface.cpp
        src/NetPanzer/PowerUps/PowerUpInterface.hpp
        src/NetPanzer/PowerUps/UnitGlobalPowerUp.cpp
        src/NetPanzer/PowerUps/UnitGlobalPowerUp.hpp
        src/NetPanzer/PowerUps/UnitPowerUp.cpp
        src/NetPanzer/PowerUps/UnitPowerUp.hpp
        src/NetPanzer/Resources/ResourceManager.cpp
        src/NetPanzer/Resources/ResourceManager.hpp
        src/NetPanzer/Scripts/NetPanzerModule.cpp
        src/NetPanzer/Scripts/ScriptHelper.cpp
        src/NetPanzer/Scripts/ScriptHelper.hpp
        src/NetPanzer/Scripts/ScriptManager.cpp
        src/NetPanzer/Scripts/ScriptManager.hpp
        src/NetPanzer/Structs/TileSetStruct.hpp
        src/NetPanzer/System/DummySound.cpp
        src/NetPanzer/System/DummySound.hpp
        src/NetPanzer/System/SDLEvents.cpp
        src/NetPanzer/System/SDLEvents.hpp
        src/NetPanzer/System/SDLSound.cpp
        src/NetPanzer/System/SDLSound.hpp
        src/NetPanzer/System/SDLVideo.cpp
        src/NetPanzer/System/SDLVideo.hpp
        src/NetPanzer/System/Sound.cpp
        src/NetPanzer/System/Sound.hpp
        src/NetPanzer/Units/UnitBase.hpp
        src/NetPanzer/Units/UnitBlackBoard.cpp
        src/NetPanzer/Units/UnitBlackBoard.hpp
        src/NetPanzer/Units/UnitBucketArray.cpp
        src/NetPanzer/Units/UnitBucketArray.hpp
        src/NetPanzer/Units/UnitGlobals.cpp
        src/NetPanzer/Units/UnitGlobals.hpp
        src/NetPanzer/Units/UnitInterface.cpp
        src/NetPanzer/Units/UnitInterface.hpp
        src/NetPanzer/Units/UnitLifecycles.hpp
        src/NetPanzer/Units/UnitOpcodeDecoder.cpp
        src/NetPanzer/Units/UnitOpcodeDecoder.hpp
        src/NetPanzer/Units/UnitOpcodeEncoder.cpp
        src/NetPanzer/Units/UnitOpcodeEncoder.hpp
        src/NetPanzer/Units/UnitOpcodes.hpp
        src/NetPanzer/Units/UnitProfileInterface.cpp
        src/NetPanzer/Units/UnitProfileInterface.hpp
        src/NetPanzer/Units/UnitState.cpp
        src/NetPanzer/Units/UnitState.hpp
        src/NetPanzer/Units/UnitTypes.hpp
        src/NetPanzer/Units/Vehicle.cpp
        src/NetPanzer/Units/Vehicle.hpp
        src/NetPanzer/Views/Components/Button.cpp
        src/NetPanzer/Views/Components/Button.hpp
        src/NetPanzer/Views/Components/cButton.cpp
        src/NetPanzer/Views/Components/cButton.hpp
        src/NetPanzer/Views/Components/CheckBox.cpp
        src/NetPanzer/Views/Components/CheckBox.hpp
        src/NetPanzer/Views/Components/Choice.cpp
        src/NetPanzer/Views/Components/Choice.hpp
        src/NetPanzer/Views/Components/cInputField.cpp
        src/NetPanzer/Views/Components/cInputField.hpp
        src/NetPanzer/Views/Components/Component.cpp
        src/NetPanzer/Views/Components/Component.hpp
        src/NetPanzer/Views/Components/Desktop.cpp
        src/NetPanzer/Views/Components/Desktop.hpp
        src/NetPanzer/Views/Components/InfoBar.cpp
        src/NetPanzer/Views/Components/InfoBar.hpp
        src/NetPanzer/Views/Components/InputEvent.hpp
        src/NetPanzer/Views/Components/Label.cpp
        src/NetPanzer/Views/Components/Label.hpp
        src/NetPanzer/Views/Components/MiniMap.cpp
        src/NetPanzer/Views/Components/MiniMap.hpp
        src/NetPanzer/Views/Components/MouseEvent.hpp
        src/NetPanzer/Views/Components/newButton.cpp
        src/NetPanzer/Views/Components/newButton.hpp
        src/NetPanzer/Views/Components/ScrollBar.cpp
        src/NetPanzer/Views/Components/ScrollBar.hpp
        src/NetPanzer/Views/Components/StateChangedCallback.hpp
        src/NetPanzer/Views/Components/View.cpp
        src/NetPanzer/Views/Components/View.hpp
        src/NetPanzer/Views/Components/ViewGlobals.cpp
        src/NetPanzer/Views/Components/ViewGlobals.hpp
        src/NetPanzer/Views/Game/AreYouSureExitView.cpp
        src/NetPanzer/Views/Game/AreYouSureExitView.hpp
        src/NetPanzer/Views/Game/AreYouSureResignView.cpp
        src/NetPanzer/Views/Game/AreYouSureResignView.hpp
        src/NetPanzer/Views/Game/CodeStatsView.cpp
        src/NetPanzer/Views/Game/CodeStatsView.hpp
        src/NetPanzer/Views/Game/DisconectedView.cpp
        src/NetPanzer/Views/Game/DisconectedView.hpp
        src/NetPanzer/Views/Game/EndRoundView.cpp
        src/NetPanzer/Views/Game/EndRoundView.hpp
        src/NetPanzer/Views/Game/GameTemplateView.cpp
        src/NetPanzer/Views/Game/GameTemplateView.hpp
        src/NetPanzer/Views/Game/GameView.cpp
        src/NetPanzer/Views/Game/GameView.hpp
        src/NetPanzer/Views/Game/GFlagSelectionView.cpp
        src/NetPanzer/Views/Game/GFlagSelectionView.hpp
        src/NetPanzer/Views/Game/HelpScrollView.cpp
        src/NetPanzer/Views/Game/HelpScrollView.hpp
        src/NetPanzer/Views/Game/HelpScrollViewAlt.cpp
        src/NetPanzer/Views/Game/HelpScrollViewAlt.hpp
        src/NetPanzer/Views/Game/LibView.cpp
        src/NetPanzer/Views/Game/LibView.hpp
        src/NetPanzer/Views/Game/LoadingView.cpp
        src/NetPanzer/Views/Game/LoadingView.hpp
        src/NetPanzer/Views/Game/MiniMapView.cpp
        src/NetPanzer/Views/Game/MiniMapView.hpp
        src/NetPanzer/Views/Game/MiniMapViewAlt.cpp
        src/NetPanzer/Views/Game/MiniMapViewAlt.hpp
        src/NetPanzer/Views/Game/RankView.cpp
        src/NetPanzer/Views/Game/RankView.hpp
        src/NetPanzer/Views/Game/ResignView.cpp
        src/NetPanzer/Views/Game/ResignView.hpp
        src/NetPanzer/Views/Game/UStyleSelectionView.cpp
        src/NetPanzer/Views/Game/UStyleSelectionView.hpp
        src/NetPanzer/Views/Game/VehicleSelectionView.cpp
        src/NetPanzer/Views/Game/VehicleSelectionView.hpp
        src/NetPanzer/Views/MainMenu/Multi/MasterServer/ServerInfo.cpp
        src/NetPanzer/Views/MainMenu/Multi/MasterServer/ServerInfo.hpp
        src/NetPanzer/Views/MainMenu/Multi/MasterServer/ServerList.cpp
        src/NetPanzer/Views/MainMenu/Multi/MasterServer/ServerList.hpp
        src/NetPanzer/Views/MainMenu/Multi/MasterServer/ServerQueryThread.cpp
        src/NetPanzer/Views/MainMenu/Multi/MasterServer/ServerQueryThread.hpp
        src/NetPanzer/Views/MainMenu/Multi/GetSessionView.cpp
        src/NetPanzer/Views/MainMenu/Multi/GetSessionView.hpp
        src/NetPanzer/Views/MainMenu/Multi/HostJoinTemplateView.cpp
        src/NetPanzer/Views/MainMenu/Multi/HostJoinTemplateView.hpp
        src/NetPanzer/Views/MainMenu/Multi/HostOptionsView.cpp
        src/NetPanzer/Views/MainMenu/Multi/HostOptionsView.hpp
        src/NetPanzer/Views/MainMenu/Multi/HostView.cpp
        src/NetPanzer/Views/MainMenu/Multi/HostView.hpp
        src/NetPanzer/Views/MainMenu/Multi/IPAddressView.cpp
        src/NetPanzer/Views/MainMenu/Multi/IPAddressView.hpp
        src/NetPanzer/Views/MainMenu/Multi/JoinView.cpp
        src/NetPanzer/Views/MainMenu/Multi/JoinView.hpp
        src/NetPanzer/Views/MainMenu/Multi/MapSelectionView.cpp
        src/NetPanzer/Views/MainMenu/Multi/MapSelectionView.hpp
        src/NetPanzer/Views/MainMenu/Multi/PlayerNameView.cpp
        src/NetPanzer/Views/MainMenu/Multi/PlayerNameView.hpp
        src/NetPanzer/Views/MainMenu/Multi/ServerListView.cpp
        src/NetPanzer/Views/MainMenu/Multi/ServerListView.hpp
        src/NetPanzer/Views/MainMenu/Multi/TipsView.cpp
        src/NetPanzer/Views/MainMenu/Multi/TipsView.hpp
        src/NetPanzer/Views/MainMenu/Multi/UnitColorView.cpp
        src/NetPanzer/Views/MainMenu/Multi/UnitColorView.hpp
        src/NetPanzer/Views/MainMenu/Multi/UnitSelectionView.cpp
        src/NetPanzer/Views/MainMenu/Multi/UnitSelectionView.hpp
        src/NetPanzer/Views/MainMenu/CreditsScrollView.cpp
        src/NetPanzer/Views/MainMenu/CreditsScrollView.hpp
        src/NetPanzer/Views/MainMenu/CreditsView.cpp
        src/NetPanzer/Views/MainMenu/CreditsView.hpp
        src/NetPanzer/Views/MainMenu/HelpView.cpp
        src/NetPanzer/Views/MainMenu/HelpView.hpp
        src/NetPanzer/Views/MainMenu/MainMenuView.cpp
        src/NetPanzer/Views/MainMenu/MainMenuView.hpp
        src/NetPanzer/Views/MainMenu/MenuTemplateView.cpp
        src/NetPanzer/Views/MainMenu/MenuTemplateView.hpp
        src/NetPanzer/Views/MainMenu/OptionsTemplateView.cpp
        src/NetPanzer/Views/MainMenu/OptionsTemplateView.hpp
        src/NetPanzer/Views/MainMenu/OrderingView.cpp
        src/NetPanzer/Views/MainMenu/OrderingView.hpp
        src/NetPanzer/Views/MainMenu/RMouseHackView.cpp
        src/NetPanzer/Views/MainMenu/RMouseHackView.hpp
        src/NetPanzer/Views/MainMenu/SkirmishView.cpp
        src/NetPanzer/Views/MainMenu/SkirmishView.hpp
        src/NetPanzer/Views/MainMenu/SpecialButtonView.cpp
        src/NetPanzer/Views/MainMenu/SpecialButtonView.hpp
        src/NetPanzer/Views/GameViewGlobals.cpp
        src/NetPanzer/Views/GameViewGlobals.hpp
        src/NetPanzer/Weapons/BulletWeapon.cpp
        src/NetPanzer/Weapons/BulletWeapon.hpp
        src/NetPanzer/Weapons/MissleWeapon.cpp
        src/NetPanzer/Weapons/MissleWeapon.hpp
        src/NetPanzer/Weapons/Projectile.cpp
        src/NetPanzer/Weapons/Projectile.hpp
        src/NetPanzer/Weapons/ProjectileInterface.cpp
        src/NetPanzer/Weapons/ProjectileInterface.hpp
        src/NetPanzer/Weapons/ShellWeapon.cpp
        src/NetPanzer/Weapons/ShellWeapon.hpp
        src/NetPanzer/Weapons/Weapon.cpp
        src/NetPanzer/Weapons/Weapon.hpp
        src/NetPanzer/Weapons/WeaponGlobals.cpp
        src/NetPanzer/Weapons/WeaponGlobals.hpp
        support/macosx/SDLMain.h
        support/macosx/SDLMain.m
        support/tools/bmp2pak.cpp
        support/tools/pak2bmp.cpp)
